--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             <button class="btn" id="btnVerify">Verification Queue</button>
           </div>
           <div class="hint" style="margin-top:10px">
-            <b>Tip for demo video:</b> click an incident to open <i>AI explanation + recommended actions</i>.
+            <b>Tip for demo :</b> click an incident to open <i>AI explanation + recommended actions</i>.
           </div>
         </div>
       </aside>
